# signal_timing_pcb

./: .gitignore  README.md
Archive/rev_2/I2S_Sandbox_Pt2/: sdkconfig
Archive/rev_2/blink/: .gitignore
Archive/rev_2/i2s_sinewave_gptimer/: .gitignore
Archive/sdmmc/: sdkconfig
Rev 6/Rev 6/: Rev 6.kicad_prl  Rev 6.kicad_pro  fp-info-cache
Rev_4/printed_circuit_board/project_file/: PCB_one_rev4-B_Adhesive.gbr  PCB_one_rev4-B_Cu.gbr  PCB_one_rev4-B_Mask.gbr  PCB_one_rev4-B_Paste.gbr  PCB_one_rev4-B_Silkscreen.gbr  PCB_one_rev4-Edge_Cuts.gbr  PCB_one_rev4-F_Adhesive.gbr  PCB_one_rev4-F_Cu.gbr  PCB_one_rev4-F_Mask.gbr  PCB_one_rev4-F_Paste.gbr  PCB_one_rev4-F_Silkscreen.gbr  PCB_one_rev4-NPTH.drl  PCB_one_rev4-PTH.drl  (+11 more)
app/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
app/main/: CMakeLists.txt  main.c  stp_adc.c  stp_adc.h  stp_audio__audio_ops.c  stp_audio__audio_ops.h  stp_i2s_audio_ops.c  stp_i2s_audio_ops.h  stp_sd_sdcardops.c  stp_sd_sdcardops.h  stpsd_sd_sdcardoperations.c  stpsd_sd_sdcardops.c
app/supporting_programs/: FilteredWhiteNoiseGenerator.m  SINEA.wav.REMOVED.git-id  White Noise Audio File Data.xlsx  wavfileparser.c  ~$sineWaveAudioData.xlsx
main_program/: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main_program/main/: CMakeLists.txt  main copy.c  main.c
rev_2/I2S_sandbox/: .gitignore  CMakeLists.txt
rev_2/hello_world/: .gitignore
rev_2/i2s_sinewave_gptimer/: CMakeLists.txt  sdkconfig
software/: bimodal_device.ino
stp_sdcard_ops/: sdkconfig  sdkconfig.old
stp_sdcard_ops/main/: sd_card_example_main.c
(+24 files in other folders)
